[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "torch>=2.4.0",
    "safetensors",
    "transformers>=4.36",
    "accelerate>=0.26.0"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
required-version = "22.3.0"

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
combine_star = true
known_local_folder = ["tests", "cli"]